GetRevenues added
