# backend/internal/entity/revenue.go
@@ -1,7 +1,8 @@
 package entity
 
 import (
-	"go/types"
+	"backend/internal/types"
+	"time"
 
 	"github.com/google/uuid"
 )
@@ -12,6 +13,13 @@ type Revenue struct {
 	Name        string     `json:"name"`
 	Type        types.Type `json:"type"`
 	Amount      int64      `json:"amount"`
-	Description string     `json:"description"`
-	GroupId     uuid.UUID  `json:"group_id"`
+	Description *string    `json:"description"`
+	GroupId     *uuid.UUID `json:"group_id"`
+	Datetime    time.Time  `json:"datetime"`
+	CreatedAt   time.Time  `json:"created_at"`
+	UpdatedAt   time.Time  `json:"updated_at"`
+}
+
+type RevenueFilter struct {
+	Pagination Pagination `json:"pagination"`
 }
